# applied-ml-karto

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  SET_UP_MACHINE.md  SET_UP_PROJECT.md  STRUCTURE.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  deploy-docs.yml
docs/: index.md
docs/project01/: EXAMPLE_ANALYSIS.md  README.md
docs/project02/: README.md
docs/project03/: README.md
docs/project04/: README.md
docs/project05/: README.md
midterm/: README.md  midterm_project_karto.ipynb
notebooks/example01/: automobile_price_data3.csv  lab1_starter_example.ipynb
notebooks/example02/: lab2_starter.ipynb
notebooks/project01/: custom_project.ipynb  ml01.ipynb  ml01.py
notebooks/project02/: Readme.md  ml02_karto.ipynb
notebooks/project03/: ml03_karto.ipynb
notebooks/project04/: ml04_karto.ipynb
notebooks/project05/: ensemble-karto.ipynb  ensemble_results_summary.csv  spiral.csv
tests/: test_smoke.py
